[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/DarkTheme/Dark.theme" type="Theme" id=1]
[ext_resource path="res://Scripts/menu_start.gd" type="Script" id=2]
[ext_resource path="res://Assets/sounds/Peck.wav" type="AudioStream" id=3]
[ext_resource path="res://Scenes/help_popup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/sounds/Hop.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/sounds/DeEvolution-Title (1).mp3" type="AudioStream" id=6]

[node name="Start Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Play Button" type="Button" parent="."]
margin_left = 32.0
margin_top = 410.0
margin_right = 153.0
margin_bottom = 454.0
theme = ExtResource( 1 )
text = "Play!"

[node name="How to Play Button" type="Button" parent="."]
margin_left = 31.0
margin_top = 470.0
margin_right = 153.0
margin_bottom = 514.0
theme = ExtResource( 1 )
text = "Huh?"

[node name="Quit Button" type="Button" parent="."]
margin_left = 32.0
margin_top = 527.0
margin_right = 153.0
margin_bottom = 571.0
theme = ExtResource( 1 )
text = "Bye"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 407.0
margin_top = 48.0
margin_right = 696.0
margin_bottom = 112.0
theme = ExtResource( 1 )
text = "
  Eat or Be Eaten: Who's Chicken Now?"
scroll_active = false

[node name="AudioClick" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 500, 0 )
stream = ExtResource( 3 )

[node name="AudioQuit" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 500, 0 )
stream = ExtResource( 5 )

[node name="AudioTitleMusic" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 600, 0 )
stream = ExtResource( 6 )
volume_db = -9.0

[node name="InstructionsDialog" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="Play Button" to="." method="_on_Play_Button_pressed"]
[connection signal="pressed" from="How to Play Button" to="." method="_on_How_to_Play_Button_pressed"]
[connection signal="pressed" from="Quit Button" to="." method="_on_Quit_Button_pressed"]
